crates/fig-parser/tests/snapshots/integration_tests__control_flow__pass_statement.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: nop
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: empty_if
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: cond
            ty: Bool
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - If:
              condition:
                Path:
                  segments:
                    - cond
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body:
                statements:
                  - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: empty_for
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: data
            ty:
              Array:
                element_type: I32
                size: ~
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - For:
              pattern: item
              iterable:
                Path:
                  segments:
                    - data
              body:
                statements:
                  - Pass
