crates/fig-parser/tests/snapshots/integration_tests__control_flow__return_various.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: early_return
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: LessThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Return:
                      IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
              elif_clauses: []
              else_body: ~
          - Let:
              annotations: []
              name: result
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: Multiply
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Return:
              Path:
                segments:
                  - result
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: multiple_returns
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: Equal
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Return:
                      IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
              elif_clauses:
                - condition:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                      op: Equal
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "1"
                          suffix: ~
                  body:
                    statements:
                      - Return:
                          IntegerLiteral:
                            base: Decimal
                            digits: "1"
                            suffix: ~
              else_body:
                statements:
                  - Return:
                      BinaryOp:
                        lhs:
                          Path:
                            segments:
                              - x
                        op: Multiply
                        rhs:
                          Path:
                            segments:
                              - x
